[package]
name = "humio"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.1", default-features = false, features = ["macros"] }
hyper = { version = "0.14", features = ["client","http1"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"